--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "自动化测试框架 jest 学习，从入门到进阶的过程笔记",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --filter ./scripts/filter-unit.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.3.1"
+    "axios": "^1.2.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1"
   }
 }
